--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.13",
     "@mui/x-date-pickers": "^5.0.8",
+    "@redux-devtools/extension": "^3.2.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.36.0",
     "bootstrap": "^5.2.2",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.5.0",
@@ -21,11 +23,14 @@
     "react-custom-pagination": "^1.6.8",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.6.1",
     "react-to-pdf": "^0.0.14",
     "react-to-print": "^2.14.8",
+    "redux": "^4.2.0",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
