--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.36.0",
     "bootstrap": "^5.2.2",
+    "firebase": "^9.15.0",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "react-calendar": "^4.0.0",
     "react-custom-pagination": "^1.6.8",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
@@ -31,6 +33,7 @@
     "react-to-print": "^2.14.8",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
