--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@mui/material": "^5.10.13",
     "@mui/x-date-pickers": "^5.0.8",
     "@redux-devtools/extension": "^3.2.3",
+    "@tanstack/react-query": "^4.20.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.36.0",
+    "axios": "^1.2.1",
     "bootstrap": "^5.2.2",
     "firebase": "^9.15.0",
     "formik": "^2.2.9",
