--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.5.0",
     "react-calendar": "^4.0.0",
+    "react-confirm-alert": "^3.0.6",
     "react-custom-pagination": "^1.6.8",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
@@ -33,6 +34,7 @@
     "react-select": "^5.6.1",
     "react-to-pdf": "^0.0.14",
     "react-to-print": "^2.14.8",
+    "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
