--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
+    "rsuite": "^5.26.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
