--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "react-custom-pagination": "^1.6.8",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.43.5",
+    "react-loading-skeleton": "^3.2.0",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.2",
